# go-bazel-github-workflow

./: .goreleaser.yml  MODULE.bazel  README.md  bazel-bin  bazel-go-bazel-github-workflow  bazel-out  bazel-testlogs  go.mod  public.crt  repositories.bzl
.github/workflows/: release.yaml  test.yaml
app/: BUILD.bazel  images.bzl  server.go  server_test.go
certs/: BUILD.bazel  apt_packages.yaml  import-cosign.key  import-cosign.pub  private.pem  signing_config.v0.2.json
