load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_cross_binary", "go_test")

load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push",  "oci_image_index", "oci_load")

load("@gazelle//:def.bzl", "gazelle")
load("//:transition.bzl", "multi_arch")

load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

go_binary(
    name = "server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "server_linux_amd64",
    target = ":server",
    platform = "@rules_go//go/toolchain:linux_amd64",
)

go_cross_binary(
    name = "server_linux_arm64",
    target = ":server",
    platform = "@rules_go//go/toolchain:linux_arm64",
)

filegroup(
    name = "generate_binary_filegroup",
    srcs = [
        ":server_linux_amd64",
        ":server_linux_arm64",
    ],
)

pkg_tar(
    name = "release_tarball",
    srcs = [":generate_binary_filegroup"],
    strip_prefix = ".",
)

genrule(
    name = "build_binary",
    srcs = [":server_linux_amd64", ":server_linux_arm64"],
    outs = ["server_linux_amd64_bin", "server_linux_arm64_bin"],
    cmd = """
        cp $(location :server_linux_amd64) $(location server_linux_amd64_bin)
        cp $(location :server_linux_arm64) $(location server_linux_arm64_bin)
    """,
)

genrule(
    name = "sign_binary",
    srcs = [":server_linux_amd64",":server_linux_arm64", "//certs:import-cosign.key","//certs:signing_config.json","//certs:signing_config.v0.2.json"],
    outs = ["server_linux_amd64.sig","server_linux_arm64.sig"],
    tools = ["@cosign_binary//file"],
    cmd = """
        ## using local cosign cert and key and no tlog upload
        #export COSIGN_PASSWORD=""
        #$(location @cosign_binary//file) sign-blob --key $(location //certs:import-cosign.key) --signing-config $(location //certs:signing_config.json) --bundle $(location server_linux_amd64.sig) $(location :server_linux_amd64)
        #$(location @cosign_binary//file) sign-blob --key $(location //certs:import-cosign.key) --signing-config $(location //certs:signing_config.json) --bundle $(location server_linux_arm64.sig) $(location :server_linux_arm64)

        ## using keyless and upload
        export COSIGN_EXPERIMENTAL=1
        $(location @cosign_binary//file) sign-blob --yes  --bundle $(location server_linux_amd64.sig) $(location :server_linux_amd64)
        $(location @cosign_binary//file) sign-blob --yes  --bundle $(location server_linux_arm64.sig) $(location :server_linux_arm64)
    """,
)

genrule(
    name = "create_checksum",
    srcs = [":server_linux_amd64_bin",":server_linux_arm64_bin", ":server_linux_amd64.sig",":server_linux_arm64.sig"],
    outs = ["server_checksums.txt"],

    cmd = """
        echo  `sha256sum  $(location :server_linux_amd64_bin) | cut -d ' ' -f 1` server_linux_amd64_bin > $(location :server_checksums.txt)
        echo  `sha256sum  $(location :server_linux_amd64.sig) | cut -d ' ' -f 1` server_linux_amd64.sig >> $(location :server_checksums.txt)        
        echo  `sha256sum  $(location :server_linux_arm64_bin) | cut -d ' ' -f 1` server_linux_arm64_bin >> $(location :server_checksums.txt)
        echo  `sha256sum  $(location :server_linux_arm64.sig) | cut -d ' ' -f 1` server_linux_arm64.sig >> $(location :server_checksums.txt)        
    """,
)

genrule(
    name = "sign_checksum",
    srcs = [":server_checksums.txt", "//certs:import-cosign.key","//certs:signing_config.json","//certs:signing_config.v0.2.json"],
    outs = ["server_checksums.txt.sig"],
    tools = ["@cosign_binary//file"],
    cmd = """
        ## using local cosign cert and key and no tlog upload
        #export COSIGN_PASSWORD=""
        #$(location @cosign_binary//file) sign-blob --key $(location //certs:import-cosign.key) --signing-config $(location //certs:signing_config.json) --bundle $(location :server_checksums.txt.sig) $(location :server_checksums.txt)

        ## using keyless and upload
        export COSIGN_EXPERIMENTAL=1
        $(location @cosign_binary//file) sign-blob --yes --bundle $(location :server_checksums.txt.sig) $(location :server_checksums.txt)
    """,
)

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    importpath = "app",
    visibility = ["//visibility:private"],
    deps = [    
        "@com_github_gorilla_mux//:go_default_library",      
    ],
)


go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    timeout = "short",    
    embed = [":go_default_library"], 
    deps = [
        "@com_github_gorilla_mux//:go_default_library",
    ],
)

pkg_tar(
    name = "app-tar",
    srcs = [":server"],
    package_dir = "/",
)

oci_image(
    name = "server_image",
    base = "@distroless_base",
    tars = [":app-tar"],  
    entrypoint = ["/server"],
    cmd = [],
    env = {},
    exposed_ports = [
        "8080/tcp",
    ],    
)

multi_arch(
    name = "images-linux-amd64",
    image = ":server_image",
    platforms = [
        "//:linux_amd64",       
    ],
)

multi_arch(
    name = "images-linux-arm64",
    image = ":server_image",
    platforms = [
        "//:linux_arm64",
    ],
)

oci_image_index(
    name = "index",
    images = [
        ":images-linux-amd64",
        ":images-linux-arm64",      
    ],
)

oci_push(
    name = "push-image",
    image = ":index",
    repository = "docker.io/salrashid123/server_image",
    remote_tags = ["server"]
)


load("//build:variables.bzl", "IMAGE_REPOSITORY_SETTINGS")
load("//build/cosign:macros.bzl", "sign_all")

load(":images.bzl", "ALL_IMAGES")

IMAGES_TO_SIGN = ALL_IMAGES

sign_all(
    name = "sign_all_images",
    images = {"{registry}/{name}".format(
        name = image_spec.repository,
        registry = IMAGE_REPOSITORY_SETTINGS.container_registry,
    ): image_spec.image for image_spec in IMAGES_TO_SIGN},
    tags = [
        "server",
    ],
)

oci_image(
    name = "custom_server_image",
    base = "@distroless_base",
    tars = ["@custom_debian_packages//:flat",":app-tar"],  
    entrypoint = ["/server"],
    cmd = [],
    env = {},
    exposed_ports = [
        "8080/tcp",
    ],    
)


genrule(
    name = "extract_and_prep",
    srcs = ["@skopeo_deb//file"], 
    outs = ["skopeo"],
    cmd = """
    ar x $(location @skopeo_deb//file)
    tar -xf data.tar.xz
    cp usr/bin/skopeo $(location :skopeo)
    """,
)

genrule(
    name = "encrypt_image",
    srcs = [":server_image", ":extract_and_prep", "//certs:pub-ml-kem-768.pem", "//certs:tls-ca-chain.pem", "@oci_crypt_binary//file"],
    outs = ["encrypted_oci_image.tar"],
    executable = False,
    cmd = """

    export PQPUB=`openssl enc -base64 -A -in $(location //certs:pub-ml-kem-768.pem)`

    cat <<EOF > ocicrypt.json
{
"key-providers": {
    "pqccrypt": {
    "cmd": {
        "path": "$(location @oci_crypt_binary//file)",
        "args": [   
        "--pqcURI","pqc://pq?pub=$$PQPUB"       
        ]
    }
    }
}
}
EOF

    export OCICRYPT_KEYPROVIDER_CONFIG=ocicrypt.json
    export SSL_CERT_FILE=$(location //certs:tls-ca-chain.pem)

cat << EOF > /tmp/authfile.json
{
	"auths": {
		"https://index.docker.io/v1/": {
			"auth": "redacted"
		}
	}
}
EOF

    #$(location :extract_and_prep) --tmpdir=/tmp/ login  --authfile=/tmp/authfile.json docker.io
    #$(location :extract_and_prep) --tmpdir=/tmp/ copy --all --encrypt-layer=-1  --encryption-key="provider:pqccrypt:pqc://pq?pub=$$PQPUB"  oci:$(location :server_image) docker://docker.io/salrashid123/server_image:encrypted

    $(location :extract_and_prep) --tmpdir=/tmp/ copy --all --encrypt-layer=-1  --encryption-key="provider:pqccrypt:pqc://pq?pub=$$PQPUB"  oci:$(location :server_image) docker://registry.domain.com:5000/app:encrypted

    $(location :extract_and_prep) --tmpdir=/tmp/ copy --all --encrypt-layer=-1  --encryption-key="provider:pqccrypt:pqc://pq?pub=$$PQPUB"  oci:$(location :server_image) oci-archive:$(location :encrypted_oci_image.tar)
     
    """,
)
